operator/pkg/gateway-api/testdata/gateway/httproute-backendtlspolicy-multiparent/input/httproute-backendtlspolicy-reencrypt.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.196
        ipMode: VIP
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-namespace-with-https-listener
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.197
        ipMode: VIP
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFRENDQXZnQ0ZGYTNTN3FWcmRqcmF6TjN4RVl4VHhFcUNyVGhNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1GZ3gKQ3pBSkJnTlZCQVlUQWxWVE1STXdFUVlEVlFRSURBcFRiMjFsTFZOMFlYUmxNUjh3SFFZRFZRUUtEQlpMZFdKbApjbTVsZEdWeklFZGhkR1YzWVhrZ1FWQkpNUk13RVFZRFZRUUREQXBuWVhSbGQyRjVZWEJwTUI0WERUSTJNREV3Ck5qQTJORFl3TlZvWERUTTJNREV3TkRBMk5EWXdOVm93TVRFTE1Ba0dBMVVFQmhNQ1ZWTXhFREFPQmdOVkJBb00KQjBGamJXVWdRMjh4RURBT0JnTlZCQU1NQjJSbFptRjFiSFF3Z2dJaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQwpEd0F3Z2dJS0FvSUNBU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRZ0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQ1N3d2dna29BZ0VBQW9JQ0FRQ25hM04vZzVXOXRMemgKSkdycTQzWXV3a2N2WENtWjA0c3JtL1lIdmo1YnFyakJyVWdyWTJYZXRLckhKb29kdVNPODhDR08zSG1tWlNlQgo3TnRpY2orQXI1MlhiVlpoZmI4WDZoaEdxZUhjeDA2YWNvTVNidzlkUE5CQklzSGh3dHJoZitUajhOUlJtMFp5Cmp3QjB6MUZGQTVkUWRBQWd1VkcyL1lId1c4T1BaVCtSODgreG1xSktDdlY0N2pHSHBydktDcmNVajB5eHpxTmMKbWQwNmRxVkcrNkllOVdnUUNsQ2V0L2liV2FUY2lQMVhGNHFlNGRGZk1wajNJWlhlTHdOV1hieUwrUTdqWXV3aApYNGE1OHhtRi81UjU5Z [...]
kind: Secret
metadata:
  name: tls-validity-checks-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy-reencrypt
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace-with-https-listener
      namespace: gateway-conformance-infra
  hostnames:
    - https-listener.org
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy-reencrypt-two
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
      namespace: gateway-conformance-infra
  hostnames:
    - https-listener.org
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
    - name: "btls"
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: normative-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-test"
      sectionName: "btls"
  validation:
    caCertificateRefs:
      - group: ""
        kind: ConfigMap
        # This ConfigMap is generated dynamically by the test suite.
        # It contains the CA certificate used to sign the tls-backend serving certificate.
        name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: tls-checks-ca-certificate
  namespace: gateway-conformance-infra
data:
  "ca.crt": |
    -----BEGIN CERTIFICATE-----
    MIIFkTCCA3mgAwIBAgIUH3uq38eX9d6cECwygoJk9oNm0W0wDQYJKoZIhvcNAQEL
[...]
    9OfTOO6MMca9wAJDLKxMAKvbzUKLJlwHCrJgj38HwxNOUuiydw==
    -----END CERTIFICATE-----
